# akka-event-io

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sbt
akka-event-io-journal-driver/: Cargo.toml
native-io-driver/: Cargo.toml  Makefile
project/: Cargo.scala  EnvironmentCheck.scala
src/main/scala/: Main.scala
src/main/scala/com/github/j5ik2o/akka/event/io/journal/: DynamoDBJournal.scala  TrySeq.scala
