[workspace]

members = [
    "akka-event-io-journal-driver"
]

[profile.dev]
opt-level        = 0
lto              = false
debug            = true
debug-assertions = true

[profile.release]
opt-level        = 3
lto              = true
debug            = false
debug-assertions = false

[profile.bench]
opt-level        = 3
lto              = true
debug            = false
debug-assertions = false

[profile.test]
opt-level        = 0
lto              = false
debug            = true
debug-assertions = true
